# scop

./: .gitignore  Cargo.toml  Makefile  README.md  compile-shaders-linux.sh  compile-shaders-windows.cmd
shaders/: default.frag  default.vert
src/: main.rs  old-main.rs  utils.rs  window_save.txt
src/app/: custom.rs  mod.rs  objects.rs  samourai.rs
src/engine/: camera.rs  game_object.rs  material.rs  material_bank.rs  material_loader.rs  mesh.rs  mod.rs  shared_resources.rs  transform.rs
src/engine/components/: mod.rs
src/math/: lib.rs  macros.rs  mat3.rs  mat4.rs  mod.rs  utils.rs  vec2.rs  vec3.rs  vec4.rs
src/matrix/: common.rs  lib.rs  matrix.rs  traits.rs  vector.rs
src/parsing/: mod.rs  mtl.rs  obj.rs  spv.rs  tga.rs
src/renderer/: command_pools.rs  debug.rs  device.rs  index_buffer.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  renderer.rs  scop_buffer.rs  scop_command_pool.rs  scop_descriptor_layout.rs  scop_descriptor_pool.rs  scop_descriptor_writer.rs  scop_framebuffer.rs  scop_image.rs  scop_render_pass.rs  scop_swapchain.rs  scop_texture2d.rs  shader.rs  swapchain.rs  tmp.rs  vertex.rs  vertex_buffer.rs  window.rs
textures/: debug-square.tga  earth.tga  gradient.tga  mars.tga
