[package]
name = "scop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ash = "0.37.3"
ash-window = "0.12.0"
raw-window-handle = "0.5"
winit = { version = "0.29.2", default-features = false, features = ["rwh_05", "x11", "wayland"] }
